@@ -7,6 +7,7 @@ import ru.yandex.practicum.filmorate.exeption.NotFoundException;
 import ru.yandex.practicum.filmorate.model.Film;
 import ru.yandex.practicum.filmorate.model.Genre;
 import ru.yandex.practicum.filmorate.model.Mpa;
+import ru.yandex.practicum.filmorate.model.enums.FilmSortParameters;
 import ru.yandex.practicum.filmorate.services.interfaces.FilmService;
 import ru.yandex.practicum.filmorate.storage.*;
 import ru.yandex.practicum.filmorate.storage.interfaces.DirectorStorage;
@@ -36,7 +37,7 @@ public class FilmServiceImpl implements FilmService {
         }
         if (!film.getLikeIds().isEmpty()) {
             for (Long likeId : film.getLikeIds()) {
-                likesStorage.addLike(createdFilm.getId(), likeId);
+                likesStorage.addLike(film.getId(), likeId);
             }
         }
         if (film.getGenres() != null) {
@@ -49,11 +50,11 @@ public class FilmServiceImpl implements FilmService {
         if (film.getDirectors() != null) {
             directorStorage.setDirectorToFilm(film);
         }
-        return createdFilm;
+        return getFilmById(createdFilm.getId());
     }
 
     private void mpaIds(Film film) {
-        var mpaIds = mpaService.getAllRatings().stream().map(Mpa::getId).collect(Collectors.toList());
+        var mpaIds = mpaService.getAllRatings().stream().map(Mpa::getId).toList();
         if (!mpaIds.contains(film.getMpa().getId())) {
             throw new BadRequestException("Передан не существующий рейтинг Mpa.");
         }
@@ -61,11 +62,11 @@ public class FilmServiceImpl implements FilmService {
             var genresIdsDb = genreService.getAllGenres()
                     .stream()
                     .map(Genre::getId)
-                    .collect(Collectors.toList());
+                    .toList();
             var filmsGenres = film.getGenres()
                     .stream()
                     .map(Genre::getId)
-                    .collect(Collectors.toList());
+                    .toList();
             for (Integer filmsGenreId : filmsGenres) {
                 if (!genresIdsDb.contains(filmsGenreId)) {
                     throw new BadRequestException("Передан не существующий жанр");
@@ -86,20 +87,25 @@ public class FilmServiceImpl implements FilmService {
         }
 
         if (film.getGenres() != null) {
-            List<Integer> genresIds = film.getGenres().stream().map(Genre::getId).collect(Collectors.toList());
+            List<Integer> genresIds = film.getGenres().stream().map(Genre::getId).toList();
             if (!genresIds.isEmpty()) {
-                filmDbStorage.addGenresToFilm(film.getId(), genresIds);
+                genreService.clearTableGenres(film.getId());
+                genresIds.forEach(genre -> filmDbStorage.addGenreToFilm(film.getId(), genre));
+            } else {
+                genreService.deleteGenresByFilm(film.getId());
             }
         }
         if (film.getDirectors() != null) {
             directorStorage.setDirectorToFilm(film);
+        } else {
+            directorStorage.removeFilmDirectorById(film.getId());
         }
-        return updatedFilm;
+        return getFilmById(film.getId());
     }
 
     @Override
     public List<Film> getAllFilms() {
-        return filmDbStorage.getAllFilms();
+        return filmDbStorage.getAllFilms().stream().map(this::getFullFilmObject).collect(Collectors.toList());
     }
 
     @Override
@@ -121,12 +127,13 @@ public class FilmServiceImpl implements FilmService {
                 .mpa(mpa)
                 .likeIds(likesStorage.getLikes(film.getId()))
                 .genres(genreService.getAllGenresByFilm(film.getId()))
+                .directors(directorStorage.getDirectorsFilm(film.getId()))
                 .build();
     }
 
     @Override
     public List<Film> getPopularFilms(Long size, Integer genreId, Integer year) {
-        return filmDbStorage.getPopularFilms(size, genreId, year);
+        return filmDbStorage.getPopularByGenresAndYear(size, genreId, year);
     }
 
     @Override
@@ -138,7 +145,10 @@ public class FilmServiceImpl implements FilmService {
     public List<Film> getCommonFilms(Long userId, Long friendId) {
         userDbStorage.findUserById(userId);
         userDbStorage.findUserById(friendId);
-        return filmDbStorage.getCommonFilms(userId, friendId);
+        List<Film> films = filmDbStorage.getCommonFilms(userId, friendId);
+        return films.stream()
+                .map(this::getFullFilmObject)
+                .collect(Collectors.toList());
     }
 
     public Set<Film> getRecommendFilms(Long userId) {
@@ -151,26 +161,35 @@ public class FilmServiceImpl implements FilmService {
             List<Film> films = filmDbStorage.findRecommendedFilms(userId, similarUserId);
             recommendedFilms.addAll(films);
         }
-        return recommendedFilms;
+        return recommendedFilms.stream()
+                .map(this::getFullFilmObject)
+                .collect(Collectors.toSet());
     }
 
     @Override
-    public List<Film> getFilmsSortByYearOrLikes(Long id, String obj) {
-        return directorStorage.getFilmsSortByYearOrLikes(id, obj);
+    public List<Film> getFilmsSortByYearOrLikes(Long id, FilmSortParameters param) {
+        return getSortedFilmByDirector(param,id);
+    }
+
+    public List<Film> getSortedFilmByDirector(FilmSortParameters param, Long directorId) {
+        return filmDbStorage.getSortedFilmByDirector(param, directorId);
     }
 
     @Override
     public List<Film> searchFilmsByTitleAndDirector(String query, String obj) {
-        List<Film> films = filmDbStorage.searchFilmsByTitleAndDirector(query, obj);
-        return films.stream().map(this::getFullFilmObject).collect(Collectors.toList());
+        return search(query,obj);
+    }
+
+    private List<Film> search(String query, String by) {
+        return filmDbStorage.search(query, by);
     }
 
     private Film getFullFilmObject(Film film) {
         return film.toBuilder()
-                .likeIds(new HashSet<>(likesStorage.getLikes(film.getId())))
+                .likeIds(likesStorage.getLikes(film.getId()))
                 .mpa(mpaService.findRatingByFilmId(film.getId()).get())
-                .genres(new HashSet<>(genreService.getAllGenresByFilm(film.getId())))
-                .directors(new HashSet<>(directorStorage.getDirectorsFilm(film.getId().longValue())))
+                .genres(genreService.getAllGenresByFilm(film.getId()))
+                .directors(directorStorage.getDirectorsFilm(film.getId().longValue()))
                 .build();
     }
 }
